* Adding some beta-2.0 code:   * Updated service information for feature enumeration   * Added UTF-8 metadata support (1.4.2+ and 2.0.1+ only)  * Fixed some load balancing code  * Upgraded Log4j to latest version  * Fixed some unicode signature issues  * Fixed URL parsing to handle Unicode better (There's a deviation from the RFC in URI.toURL())
git-svn-id: https://atmos-java.googlecode.com/svn/trunk/@56 f9042120-e4f6-11de-b362-3513cf04e977